--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.cpsc501.a1'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+mainClassName = 'com.keirnellyer.glencaldy.runtime.Controller'
 
 repositories {
     mavenCentral()
@@ -17,6 +19,27 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+tasks.withType(JavaCompile) {
+    options.warnings = false
+}
+
+run {
+    standardInput = System.in
+}
+
 test {
     useJUnitPlatform()
+    testLogging {
+        events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            println "\nTest result: ${result.resultType}"
+            println "Test summary: ${result.testCount} tests, " +
+                    "${result.successfulTestCount} succeeded, " +
+                    "${result.failedTestCount} failed, " +
+                    "${result.skippedTestCount} skipped"
+        }
+    }
 }
